--- a/second/index.css
+++ b/second/index.css
@@ -32,7 +32,7 @@ body {
 }
 
 .circle {
-    background-color: blue;
+    background-color: skyblue;
     border-radius: 50%;
     height: 150px;
     width: 150px;
@@ -64,7 +64,14 @@ body {
     border-color: gray; 
     border-width: 1px;
     box-sizing: border-box;
-    display: inline-block;
+    display: block;
     margin: 25px auto;
-    
+    box-shadow: 5px 10px 15px gray;
+}
+
+.text {
+    text-align: center;
+    width: 100%;
+    display: inline-block;
+    letter-spacing: 7px;
 }
